<resources>
    <string name="app_name">DigiTeen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_having_account_sign_up">Not having account? Sign Up</string>
    <string name="fullname">FullName</string>
    <string name="enrollment_number">Enrollment Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="hostel">Hostel</string>
    <string name="canteen_name">Canteen Name</string>
    <string name="register">REGISTER</string>
    <string name="studentpassword">studentPassword</string>
    <string name="canteen">CANTEEN</string>
    <string name="my_orders">My Orders</string>
    <string name="new_order">New Order</string>
    <string name="choose_canteen">Choose Canteen</string>
    <string name="submit">SUBMIT</string>
    <string name="proceed">Proceed</string>
    <string name="select_items">Select Items</string>
    <string name="place_order">Place Order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="grand_total">Grand Total</string>
    <string name="sub_total">Sub Total</string>
    <string name="token_number">Token Number:</string>
    <string name="order_summary">Order Summary</string>
    <string name="quantity_ordered">Quantity Ordered</string>
    <string name="orders">ORDERS</string>
    <string name="menu">MENU</string>
    <string name="signout">signout</string>
    <string name="add_item">ADD ITEM</string>
    <string name="upload_item">UPLOAD ITEM</string>
    <string name="swipe_left_to_delete_item">(Swipe left to delete item)</string>
</resources>
