<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="in.ac.iitr.mdg.View.Owner.OwnerLandingFragment">

    <Button
        android:layout_height="0dp"
        android:id="@+id/owner_order"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/orders"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/circular_bttn" />
    <Button
        android:id="@+id/owner_menu"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/menu"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/circular_bttn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/owner_logout"
        android:layout_height="wrap_content"
        android:background="@drawable/rnd_bttn"
        android:layout_margin="20dp"
        android:text="@string/signout"
        android:textStyle="bold"
        android:textSize="18sp"/>

</LinearLayout>